--- a/deploy.yml
+++ b/deploy.yml
@@ -20,4 +20,5 @@ jobs:
           password: ${{ secrets.FTP_PASS }}
           port: ${{ secrets.FTP_PORT }}
           local-dir: ./
-          server-dir: /public_html/
+          server-dir: /public_html/acc-adn/
+           
