--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,12 @@
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php [QSA,L]
+Options -Indexes
+
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+
+    # إذا كان الملف المطلوب أو المجلد موجوداً بالفعل، لا تقم بالتحويل (مثل الصور أو css)
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+
+    # حول أي رابط آخر إلى index.php وضع الرابط في المتغير url
+    RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
+</IfModule>
